--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Honk&family=Raleway:ital,wght@0,600;1,600&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
