Layout adjust, routes configurations, courses, programs update, dashboard implementation.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Honk&family=Raleway:ital,wght@0,600;1,600&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     </style>
-    <title>Bow Course Registration</title>
+    <title>Bow Programs Portal</title>
   </head>
   <body>
     <div id="root"></div>
